{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 19,
  "lineage": "a1a78180-35f6-5eda-651d-d879fa41531a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AROBINE-INSTANCE-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AROBINE-INSTANCE-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AROBINE-INSTANCE-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "AROBINE-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:internet-gateway/igw-0e4c5e21e10eea0e3",
            "id": "igw-0e4c5e21e10eea0e3",
            "owner_id": "949160236929",
            "tags": {
              "Name": "AROBINE-IGW"
            },
            "tags_all": {
              "Name": "AROBINE-IGW"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "AROBINE-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:loadbalancer/app/AROBINE-LB/4bda393f9058bf83",
            "arn_suffix": "app/AROBINE-LB/4bda393f9058bf83",
            "desync_mitigation_mode": "defensive",
            "dns_name": "AROBINE-LB-1754557949.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:949160236929:loadbalancer/app/AROBINE-LB/4bda393f9058bf83",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "AROBINE-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06e3eb59c9484e5b0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01ac506f77a2de010"
              },
              {
                "subnet_id": "subnet-0914f4156de2463e1"
              },
              {
                "subnet_id": "subnet-0eb1c0e15fa65fe61"
              }
            ],
            "subnets": [
              "subnet-01ac506f77a2de010",
              "subnet-0914f4156de2463e1",
              "subnet-0eb1c0e15fa65fe61"
            ],
            "vpc_id": "vpc-01e145890e3ba056e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.AROBINE-SG-LOAD-BALANCER",
            "aws_subnet.AROBINE-SUBNET-AZ-A",
            "aws_subnet.AROBINE-SUBNET-AZ-B",
            "aws_subnet.AROBINE-SUBNET-AZ-C",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "AROBINE-LB-LISTENER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "AROBINE-LB-TG2-ATTACH-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "AROBINE-LB-TG2-ATTACH-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "AROBINE-LB-TG2-ATTACH-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "AROBINE-RTB-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:route-table/rtb-0959a46d5d8d83eaf",
            "id": "rtb-0959a46d5d8d83eaf",
            "owner_id": "949160236929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4c5e21e10eea0e3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AROBINE-RTB-PUBLIC"
            },
            "tags_all": {
              "Name": "AROBINE-RTB-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e145890e3ba056e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.AROBINE-IGW",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AROBINE-RTB-PUBLIC-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1f9e95124955245",
            "route_table_id": "rtb-0959a46d5d8d83eaf",
            "subnet_id": "subnet-0a67d2d419e35987d"
          },
          "dependencies": [
            "aws_internet_gateway.AROBINE-IGW",
            "aws_route_table.AROBINE-RTB-PUBLIC",
            "aws_subnet.AROBINE-SUBNET-PUBLIC",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AROBINE-RTB-PUBLIC-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c692102ccc87e5e",
            "route_table_id": "rtb-0959a46d5d8d83eaf",
            "subnet_id": "subnet-01ac506f77a2de010"
          },
          "dependencies": [
            "aws_internet_gateway.AROBINE-IGW",
            "aws_route_table.AROBINE-RTB-PUBLIC",
            "aws_subnet.AROBINE-SUBNET-AZ-A",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AROBINE-RTB-PUBLIC-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af1107dfd3a226c1",
            "route_table_id": "rtb-0959a46d5d8d83eaf",
            "subnet_id": "subnet-0914f4156de2463e1"
          },
          "dependencies": [
            "aws_internet_gateway.AROBINE-IGW",
            "aws_route_table.AROBINE-RTB-PUBLIC",
            "aws_subnet.AROBINE-SUBNET-AZ-B",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AROBINE-RTB-PUBLIC-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e92a0e2a2fe1b66",
            "route_table_id": "rtb-0959a46d5d8d83eaf",
            "subnet_id": "subnet-0eb1c0e15fa65fe61"
          },
          "dependencies": [
            "aws_internet_gateway.AROBINE-IGW",
            "aws_route_table.AROBINE-RTB-PUBLIC",
            "aws_subnet.AROBINE-SUBNET-AZ-C",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AROBINE-SG-LOAD-BALANCER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:security-group/sg-06e3eb59c9484e5b0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e3eb59c9484e5b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230922081452833700000001",
            "name_prefix": "terraform-",
            "owner_id": "949160236929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AROBINE-SG-LOAD-BALANCER"
            },
            "tags_all": {
              "Name": "AROBINE-SG-LOAD-BALANCER"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e145890e3ba056e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AROBINE-SG-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:security-group/sg-02e5ba72102ae62d5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e5ba72102ae62d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3128,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f84fde39055d53d4"
                ],
                "self": false,
                "to_port": 3128
              }
            ],
            "name": "terraform-20230922081459221200000003",
            "name_prefix": "terraform-",
            "owner_id": "949160236929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AROBINE-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "AROBINE-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e145890e3ba056e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.AROBINE-SG-LOAD-BALANCER",
            "aws_security_group.AROBINE-SG-WEB",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AROBINE-SG-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:security-group/sg-0f84fde39055d53d4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f84fde39055d53d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e3eb59c9484e5b0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230922081456082700000002",
            "name_prefix": "terraform-",
            "owner_id": "949160236929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AROBINE-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "AROBINE-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e145890e3ba056e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.AROBINE-SG-LOAD-BALANCER",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AROBINE-SUBNET-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-01ac506f77a2de010",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ac506f77a2de010",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AROBINE-SUBNET-AZ-A"
            },
            "tags_all": {
              "Name": "AROBINE-SUBNET-AZ-A"
            },
            "vpc_id": "vpc-01e145890e3ba056e"
          },
          "dependencies": [
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AROBINE-SUBNET-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-0914f4156de2463e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0914f4156de2463e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AROBINE-SUBNET-AZ-B"
            },
            "tags_all": {
              "Name": "AROBINE-SUBNET-AZ-B"
            },
            "vpc_id": "vpc-01e145890e3ba056e"
          },
          "dependencies": [
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AROBINE-SUBNET-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-0eb1c0e15fa65fe61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb1c0e15fa65fe61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AROBINE-SUBNET-AZ-C"
            },
            "tags_all": {
              "Name": "AROBINE-SUBNET-AZ-C"
            },
            "vpc_id": "vpc-01e145890e3ba056e"
          },
          "dependencies": [
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AROBINE-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-0a67d2d419e35987d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a67d2d419e35987d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AROBINE-SUBNET-PUBLIC"
            },
            "tags_all": {
              "Name": "AROBINE-SUBNET-PUBLIC"
            },
            "vpc_id": "vpc-01e145890e3ba056e"
          },
          "dependencies": [
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "AROBINE-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:vpc/vpc-01e145890e3ba056e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-038a3b87cf64bec21",
            "default_route_table_id": "rtb-0b7902792b789f120",
            "default_security_group_id": "sg-033a1ccd45e236c59",
            "dhcp_options_id": "dopt-0f37752447b5d60ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01e145890e3ba056e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7902792b789f120",
            "owner_id": "949160236929",
            "tags": {
              "Name": "AROBINE-VPC"
            },
            "tags_all": {
              "Name": "AROBINE-VPC"
            }
          }
        }
      ]
    }
  ]
}